@@ -1835,5 +1835,7 @@ $_LANG['Skype'] = 'Skype';
 $_LANG['Yahoo'] = 'Yahoo';
 $_LANG['Id:'] = 'Id:';
 $_LANG['Liability name is required!'] = 'Nazwa zobowiązania jest wymagana!';
- 
+$_LANG['include contact info'] = 'z danymi kontaktowymi';
+$_LANG['phone:'] = 'tel.:';
+
 ?>
